--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>znwhahaha</groupId>
     <artifactId>FromHbaeToNeo4j_0.0</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j</artifactId>
+            <version>3.5.18</version>
+        </dependency>
+        
+    </dependencies>
 
 </project>
